--- a/notes/templates/notes/front.html
+++ b/notes/templates/notes/front.html
@@ -16,7 +16,7 @@
       <img src="https://drive.google.com/uc?export=download&id=1oVQnqlZqt8a179GLUlHLOhvhuRFyrc7F" class="rounded mx-auto d-block" alt="Django REST framework">
       <br>
       <div class="d-grid gap-2">
-        <button class="btn btn-light" type="button"><a href="https://www.google.com/" target="_blank">Go to the frontend of this project</a></button>
+        <button class="btn btn-light" type="button"><a href="https://prashantrestfrontend.onrender.com" target="_blank">Go to the frontend of this project</a></button>
       </div>
     </div>
     
